# FastAPI-Template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  env-sample  makefile  pyproject.toml  setup.cfg
.github/workflows/: integration.yaml  release.yaml
api/: alembic.ini  app.py  config.py  db.py  deps.py  utils.py
api/endpoints/: article.py  auth.py  health.py  user.py
api/migrate/: env.py
api/migrate/versions/: 38f503a01e77_.py  46e345730671_.py  5ed609dfd923_create_article_model.py  8b70fd3f48fa_.py
api/models/: article.py  base.py  user.py
api/repositories/: __init__.py  article.py  base.py  user.py
api/schemas/: __init__.py  article.py  auth.py  msg.py  user.py
api/tests/: __init__.py  conftest.py  test_article.py  test_auth.py  test_health.py  test_user.py
deploy/: values.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
kubernetes/: fastapi.yaml  postgres.yaml
